--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons-kit": "^2.0.0",
     "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
